--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MaterialList</string>
+
+    <!-- 메인 화면 -->
+    <string name="main_title">material 아이콘 목록</string>
+    <string name="main_search">검색하기</string>
+    <string name="main_search_description">검색하여 원하는 뷰를 찾는 기능입니다.</string>
 </resources>
